--- a/.github/workflows/test_coverage.yaml
+++ b/.github/workflows/test_coverage.yaml
@@ -23,6 +23,9 @@ jobs:
       - name: Build
         run: make
 
+      - name: Clean
+        run: make clean
+
       - name: Run Unit Tests
         run: make test
 
